welcome.lessons.welcome.loopwhile.WhileMoria.scala.error
Balin:4: error: value &&!! is not a member of Boolean
	while(!estFaceMur&&!!estFaceMur)
                         ^Balin:10: error: not found: value peseBiscuit
	peseBiscuit()
        ^Balin:15: error: not found: value guache
guache()
^