welcome.lessons.welcome.loopwhile.WhileMoria.scala.code
droite()
droite()
while(! estFaceMur){
	while(!estFaceMur&&!!estFaceMur)
{avance()}
if(estSurBiscuit()){
	prendBiscuit()
	while(!estSurBiscuit){recule()}
	avance()
	peseBiscuit()
	avance()
}}	
droite()
avance()
guache()
avance()